<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TutorVirtual</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_virtual_tutor">VirtualTutorActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="button_login">Iniciar sesion</string>
    <string name="enrollment">Matricula</string>
    <string name="password">Contraseña</string>
    <string name="start_time">Hora inicio:</string>
    <string name="end_time">Hora final:</string>
    <string name="insert_time_window">Insertar Horario</string>
    <string name="schedule_availability">Disponibilidad de horario</string>
    <string name="day">Dia:</string>
    <string name="generate_suggestes_schedule">Carga academica sugerida</string>
    <string name="title_activity_suggested_schedule">SuggestedScheduleActivity</string>
    <string name="text_view_ordinary">Ordinario</string>
    <string name="text_view_extra">Extraordinario</string>

</resources>
