<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:weightSum="2" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_availability" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
				
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"/>
                
                <Spinner
                    android:id="@+id/spinner_day"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:entries="@array/day_names"/>
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/start_time"/>
                
                <TimePicker
                    android:id="@+id/time_picker_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/end_time"/>
                
                <TimePicker
                    android:id="@+id/time_picker_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
                <Button 
                    android:id="@+id/button_insert_time_window"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/insert_time_window"
                    android:onClick="insertTimeWindow"/>
                
                <Button 
                    android:id="@+id/button_generate_suggestes_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/generate_suggestes_schedule"
                    android:onClick="generateSuggestedSchedule"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view_time_window"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>