<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/button_login" />

    <EditText
        android:id="@+id/edit_text_enrollment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_text_password"
        android:layout_alignLeft="@+id/edit_text_password"
        android:layout_alignRight="@+id/edit_text_password"
        android:layout_marginBottom="66dp"
        android:ems="10"
        android:inputType="phone" >
        
        <requestFocus />
        
        </EditText>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_text_enrollment"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/enrollment"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
